auto-load tinymce for htmleditor form inputs; fixed double-scrollbar in admin layout

--- a/webroot/less/layout/default.less
+++ b/webroot/less/layout/default.less
@@ -2,6 +2,14 @@
 @import "../mixins/elements.less";
 @import "../vars.less";
 
+html {
+  overflow-y: hidden;
+}
+
+body {
+  height: 100%;
+}
+
 body.fixed-nav-top {
   margin-top: 50px;
 }
@@ -14,7 +22,7 @@ body.be-sidebar  {
 }
 
 main {
-  overflow-x: scroll;
+  //overflow-x: scroll;
 }
 
 #page {
